[package]
name = "loon"
version = "0.1.0"
authors = ["ValuedMammal <valuedmammal@protonmail.com>"]
edition = "2021"
description = "Loon wallet - coordination at a distance"
repository = "https://github.com/ValuedMammal/loon"
keywords = ["bitcoin", "nostr"]

[dependencies]
anyhow = "1"
bdk_bitcoind_rpc = { version = "0.19.0" }
bdk_chain = { version = "0.22.0", features = ["rusqlite"] }
clap = { version = "4.5", features = ["derive"] }
nostr-sdk = { version = "0.38", features = ["nip44"] }
regex-lite = "0.1.6"
tokio = { version = "1", features = ["full"] }
