[package]
name = "loon"
version = "0.1.0-alpha"
authors = ["ValuedMammal <valuedmammal@protonmail.com>"]
edition = "2021"
description = "Loon wallet - coordination at a distance"
repository = "https://github.com/ValuedMammal/loon"
keywords = ["bitcoin", "nostr"]

[dependencies]
anyhow = "1"
bitcoin = { version = "0.32.6", features = ["base64", "rand-std"] }
bdk_chain = { version = "0.23.1", features = ["rusqlite"] }
bdk_tx = { version = "0.1.0" }
clap = { version = "4.5", features = ["derive"] }
nostr-sdk = { version = "0.44.1", features = ["nip44"] }
tokio = { version = "1", features = ["full"] }

[dependencies.filter_iter]
git = "https://github.com/ValuedMammal/filter-iter"
branch = "master"
# path = "../filter-iter"
